fix get userinfo from cookie
