# docs/swagger.json
@@ -8,7 +8,7 @@
     },
     "paths": {
         "/v1/getUserInfo": {
-            "post": {
+            "get": {
                 "consumes": [
                     "application/json"
                 ],
@@ -21,13 +21,11 @@
                 "summary": "获取用户信息",
                 "parameters": [
                     {
-                        "description": "请求参数",
-                        "name": "entity",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/user.GetUserInfoReq"
-                        }
+                        "type": "string",
+                        "description": "cookie",
+                        "name": "cookie",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -151,14 +149,6 @@
             "type": "object",
             "properties": {
                 "msg": {
-                    "type": "string"
-                }
-            }
-        },
-        "user.GetUserInfoReq": {
-            "type": "object",
-            "properties": {
-                "passport": {
                     "type": "string"
                 }
             }
